fix z-index issues

--- a/sass/partials/_content.sass
+++ b/sass/partials/_content.sass
@@ -13,3 +13,4 @@
 
         &.visible
             opacity: 1
+            z-index: 1
