--- a/sass/partials/_sidebar.sass
+++ b/sass/partials/_sidebar.sass
@@ -13,3 +13,4 @@
     right: 0
     top: 0
     width: $sidebar-width
+    z-index: 2
