--- a/sass/partials/_topbar.sass
+++ b/sass/partials/_topbar.sass
@@ -10,4 +10,4 @@
     position: absolute
     right: $sidebar-width
     top: 0
-    z-index: 1
+    z-index: 2
